Fixing layout issues on the projects page

--- a/css/light/projects.css
+++ b/css/light/projects.css
@@ -3,80 +3,6 @@
     width: 960px;
 }
 
-.projects-page .left-side {
-    width: 26.04166666666667%; /* 250 / 960 */
-}
-.projects-page .left-side nav li a.first:hover {
-	background-color: #ebebeb;
-	text-decoration: none;
-}
-.projects-page .left-side nav li a.first {
-	background-color: #F9F9F9;
-	display: block;
-	font-family: 'Museo_Slab_500';
-	height: 30px;
-	color: #8E8E8E;
-	font-size: 1.2em;
-	padding-left: 12px;
-	padding-top: 9px;
-}
-.projects-page .left-side nav li:first-child {
-	border-top: 1px solid #C7C7C7
-}
-.projects-page .left-side nav li.box .title {
-	font-size: 1.2em;
-	font-family: 'Museo_Slab_500';
-}
-.projects-page .left-side nav li.box .details a {
-	width: 64px;
-	color: white;
-	height: 18px;
-	text-align: center;
-	padding-top: 8px;
-	padding-left: 10px;
-	margin: 0;
-}
-.projects-page .left-side nav li.box .details {
-	font-size: 1.1em;
-	height: 40px;
-	position: relative;
-}
-.projects-page .left-side nav li.box input {
-	height: 30px;
-}
-.projects-page .left-side nav li.box.newsletter-box .form #newsletter-email {
-	float: left;
-	width: 173px;
-	margin-left: 12px;
-}
-.projects-page .left-side nav li.box.newsletter-box .submit {
-	margin-top: 12px;
-}
-.projects-page .left-side nav li.box.newsletter-box .form p {
-	float: left;
-	margin-top: 7px;
-}
-.projects-page .left-side nav li.box {
-	background-color: #F9F9F9;
-	padding-left: 12px;
-	height: 120px;
-	padding-top: 5px;
-}
-.projects-page .left-side nav li {
-	border: 1px solid #C7C7C7;
-	border-top:  none;
-}
-.projects-page .left-side nav ul {
-	list-style-type: none;
-	margin-left: 0;
-}
-.projects-page .left-side {
-	float: left;
-	
-}
-.projects-page {
-	margin-top: 20px;
-}
 
 .projects-page .content-box .breadcrumb {
 	border: 1px solid #C7C7C7;
